--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,30 +45,31 @@
   text-decoration: none;
   font-size: 16px;
 }
-
 .text-box {
   width: 90%;
   color: #E97777;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  position: relative;
   text-align: center;
+  margin-top: 100px; /* Dodatna margina na vrhu za dodatno pomjeranje prema dolje */
+  padding: 20px;
 }
-.text-box h1{
-  font-size:60px;
+
+/* Stilizacija h1 unutar text-box */
+.text-box h1 {
+  font-size: 60px;
   font-weight: 600;
-    font-size: 50px;
-    color:#E97777;
-    text-align: center;
-  margin-top:272px;
-  
+  color: #E97777;
+  text-align: center;
+  margin-top: 20px; /* Povećajte margine na vrhu naslova za dodatno pomjeranje prema dolje */
 }
-.text-box p{
-  margin:10px 0 40px;
-  font-size:30px;
+
+/* Stilizacija paragrafa unutar text-box */
+.text-box p {
+  margin: 10px 0 40px;
+  font-size: 30px;
   font-family: 'Times New Roman', Times, serif;
 }
+
 .header {
   min-height: 100vh;
   width: 100;
